--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -1317,3 +1317,19 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_FUNCTION_TRACER=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_LKDTM=y
+
+# sensors  requirements from forum
+
+CONFIG_DHT11=m
+CONFIG_GPIO_PCA953X=m
+CONFIG_SENSORS_JC42=m
+CONFIG_SENSORS_LM75=m
+CONFIG_SERIAL_SC16IS7XX_CORE=m
+CONFIG_BME680=m
+CONFIG_BME680_I2C=m
+CONFIG_BMP280_I2C=m
+CONFIG_BMP280=m
+CONFIG_HTU21=m
+CONFIG_GPIO_PCF857X=m
+CONFIG_SI7020=m
+CONFIG_SENSORS_TMP102=y
